--- a/index.html
+++ b/index.html
@@ -3,7 +3,20 @@
 <head>
   <meta charset="utf-8">
   <title>vue-test</title>
+  <!-- development version, includes helpful console warnings: -->
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+  <script>
+    var app = new Vue({
+      el: '#app',
+      data: {
+        message: 'Hello Vue!'
+      }
+    });
+  </script>
 </head>
 <body>
   <h1>vue-test</h1>
+  <div id="app">
+    {{ message }}
+  </div>
 </body>
