--- a/index.html
+++ b/index.html
@@ -5,18 +5,11 @@
   <title>vue-test</title>
   <!-- development version, includes helpful console warnings: -->
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-  <script>
-    var app = new Vue({
-      el: '#app',
-      data: {
-        message: 'Hello Vue!'
-      }
-    });
-  </script>
 </head>
 <body>
   <h1>vue-test</h1>
   <div id="app">
     {{ message }}
   </div>
+  <script src="index.js"></script>
 </body>
